<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/HomeActivityID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity_name"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/AboutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_button"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityID"
        app:layout_constraintVertical_bias="0.048"
        android:onClick="gotoAboutActivity"/>

    <Button
        android:id="@+id/ServiceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_name"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityID"
        app:layout_constraintVertical_bias="0.157"
        android:onClick="gotoServiceActivity"/>

    <Button
        android:id="@+id/ContactID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityID"
        app:layout_constraintVertical_bias="0.262"
        android:onClick="gotoContactActivity" />

    <ImageView
        android:id="@+id/HomeImageID"
        android:layout_width="358dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityID"
        app:srcCompat="@drawable/service" />

    <Button
        android:id="@+id/returnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_value"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeActivityID"
        app:layout_constraintVertical_bias="0.723"
        android:onClick="gotoMainActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>